force-app/main/default/objects/ContentVersion/fields/Attachment_Type__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Type__c</fullName>
    <label>Attachment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Details</fullName>
            </value>
            <value>
                <fullName>Cheque Copy</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Contract Termination</fullName>
            </value>
            <value>
                <fullName>Deal Confirmation</fullName>
            </value>
            <value>
                <fullName>Exclusivity Agreement</fullName>
            </value>
            <value>
                <fullName>Delivery Area</fullName>
            </value>
            <value>
                <fullName>Menu Item Level Photos</fullName>
            </value>
            <value>
                <fullName>Halal Certification</fullName>
            </value>
            <value>
                <fullName>Logo</fullName>
            </value>
            <value>
                <fullName>Menu</fullName>
            </value>
            <value>
                <fullName>Tax Registration Form</fullName>
            </value>
            <value>
                <fullName>Business License</fullName>
            </value>
            <value>
                <fullName>Opening Hours</fullName>
            </value>
            <value>
                <fullName>Photo Store Front</fullName>
            </value>
            <value>
                <fullName>Food Licence Number</fullName>
            </value>
            <value>
                <fullName>Account Set Up Form</fullName>
            </value>
            <value>
                <fullName>ID Card/Passport</fullName>
            </value>
            <value>
                <fullName>Cover Photo/Listing Hero Photo</fullName>
            </value>
            <value>
                <fullName>Food Photos</fullName>
                <isActive>false</isActive>
                <label>Food Photos</label>
            </value>
            <value>
                <fullName>a</fullName>
                <isActive>false</isActive>
                <label>a</label>
            </value>
            <value>
                <fullName>b</fullName>
                <isActive>false</isActive>
                <label>b</label>
            </value>
            <value>
                <fullName>d</fullName>
                <isActive>false</isActive>
                <label>d</label>
            </value>
            <value>
                <fullName>sa</fullName>
                <isActive>false</isActive>
                <label>sa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>